--- a/Frontend/ngolist_ngo.html
+++ b/Frontend/ngolist_ngo.html
@@ -67,59 +67,17 @@
     <!-- Search Bar -->
     <div class="container my-4" style="padding-top: 5rem">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for NGOs..." style="border-radius: 5px;">
-            <button class="btn btn-primary" type="button" style="border-radius: 5px;">Search</button>
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for NGOs..." style="border-radius: 5px;">
+            <button id="clearButton" class="btn btn-secondary" type="button" style="border-radius: 5px; margin-left: 10px;">Clear</button>
         </div>
     </div>
 
-    <!-- NGOs List -->
-    <div class="container" id="ngoContainer">
+    <div id="ngoContainer" class="container">
         <div class="row">
-            <!-- NGO Card Example -->
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="NGO Image">
-                    <div class="card-body">
-                        <h5 class="card-title">NGO Name 1</h5>
-                        <p class="card-text">Manager Name: XYZ</p>
-                        <p class="card-text">Address: NGO Address</p>
-                        <p class="card-text">Email: NGO Phone</p>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ngoModal1"
-                            style="display: block; margin: auto;">Additional Information</button>
-                    </div>
-                </div>
-            </div>
-            <!-- Add more NGO cards here as needed -->
-
-            <!-- Add more NGO Card Examples as needed -->
+            <!-- NGO cards will be appended here dynamically -->
         </div>
     </div>
-
-    <!-- NGO Modal 1 -->
-    <div class="modal fade" id="ngoModal1" tabindex="-1" role="dialog" aria-labelledby="ngoModalLabel1"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="ngoModalLabel1">NGO Name 1</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p><strong>Manager Name:</strong> XYZ</p>
-                    <p><strong>Address:</strong> NGO Address</p>
-                    <p><strong>Email:</strong> NGO Email</p>
-                    <p><strong>Phone:</strong> NGO Phone</p>
-                    <p><strong>Description:</strong> Detailed information about the NGO.</p>
-                </div>
-                <div class="modal-footer" style="justify-content: center;">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
     <footer class="ftco-footer ftco-section img">
         <div class="overlay"></div>
         <div class="container">
@@ -224,126 +182,7 @@
         </svg></div>
 
 
-    <script>
-        window.addEventListener('load', async () => {
-            try {
-
-                console.log("here")
-                const response = await fetch('http://localhost:3000/ngo/get'); // Update with the correct backend URL
-                const data = await response.json();
-                // console.log(response);
-                console.log(data);
-                if (response.status === 200) {
-                    displayNGOs(data.ngos);
-                } else {
-                    console.error('Failed to fetch NGOs:', data.message);
-                }
-            } catch (error) {
-                console.error('Error fetching NGOs:', error);
-            }
-        });
-
-        function displayNGOs(ngos) {
-            const ngoContainer = document.getElementById('ngoContainer');
-            const rowDiv = ngoContainer.querySelector('.row');
-            rowDiv.innerHTML = ''; // Clear existing content
-
-            ngos.forEach((ngo, index) => {
-                console.log(index)
-                const ngoCard = document.createElement('div');
-                ngoCard.className = 'col-md-4';
-
-                ngoCard.innerHTML = `
-            <div class="card mb-4">
-                <img src="${ngo.ngo_photos[0] || 'https://via.placeholder.com/150'}" height="300rem" width="140px" class="card-img-top" alt="NGO Image">
-                <div class="card-body">
-                    <h5 class="card-title">${ngo.organization_name}</h5>
-                    <p class="card-text">Manager Name: ${ngo.primary_contact.name}</p>
-                    <p class="card-text">Address: ${formatAddress(ngo.physical_addresses)}</p>
-                    <p class="card-text">Email: ${ngo.primary_contact.email}</p>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ngoModal${index}" style="display: block; margin: auto;">Additional Information</button>
-                </div>
-            </div>
-
-            <!-- Modal -->
-            <div class="modal fade" id="ngoModal${index}" tabindex="-1" aria-labelledby="ngoModalLabel${index}" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="ngoModalLabel${index}">${ngo.organization_name}</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p><strong>Manager Name:</strong> ${ngo.primary_contact.name}</p>
-                            <p><strong>Contact:</strong> ${ngo.primary_contact.phoneno}</p>
-                            <p><strong>Email:</strong> ${ngo.primary_contact.email}</p>
-                            <p><strong>Address:</strong> ${formatAddress(ngo.physical_addresses)}</p>
-                            <p>Photos:</p>
-                            ${ngo.ngo_photos.map(photo =>
-                    `<img src="${photo}" alt="NGO Photo" style="width: 100px; margin: 5px;">`).join('')
-                    }
-                        </div>
-                        <div class="modal-footer" style="justify-content: center;">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        `;
-
-                rowDiv.appendChild(ngoCard);
-            });
-        }
-
-        function formatAddress(address) {
-            return `${address.address_line_1}, ${address.address_line_2 || ''}, ${address.city}, ${address.state}, ${address.zip_code}, ${address.country}`;
-        }
-
-        function formatAddress(address) {
-            return `
-        ${address.address_line_1}, ${address.address_line_2 ? address.address_line_2 + ', ' : ''}
-        ${address.city}, ${address.state}, ${address.zip_code}, ${address.country}
-    `;
-        }
-    </script>
-
-    <!-- <script>
-        window.addEventListener('load', function () {
-            fetch('new.json')
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok ' + response.statusText);
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    console.log('Fetched data:', data);
-                    let ngoList = document.getElementById('ngoList');
-                    data.NGOs.forEach((ngo, index) => {
-                        ngoList.innerHTML += `
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card">
-                            <img class="card-img-top" src="http://placehold.it/150x150" alt="Card image cap">
-                            <div class="card-body">
-                                <h4 class="card-title">${ngo.name}</h4>
-                                <p class="card-text">Manager: ${ngo.manager}</p>
-                                <p class="card-text">Address: ${ngo.address}</p>
-                                <p class="card-text">Email: ${ngo.email}</p>
-                                <p class="card-text">Phone: ${ngo.phone}</p>
-                                <a href="#" class="btn btn-primary">Additional Information</a>
-                            </div>
-                        </div>
-                    </div>
-                `;
-                    });
-                })
-                .catch(error => console.error('Error fetching data:', error));
-        });
-    </script> -->
-
-    <script src="js/new_js.js"></script>
+    <script src="js/ngo_cards.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
