--- a/Frontend/accepted_donations_restaurant.html
+++ b/Frontend/accepted_donations_restaurant.html
@@ -5,6 +5,7 @@
     <title>NGO's Food Transactions</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Overpass:300,400,400i,600,700" rel="stylesheet">
@@ -130,6 +131,8 @@
     </style>
 </head>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -179,54 +182,24 @@
     </nav>
     <!-- END nav -->
 
+    <!-- <p class="card-text">Latitude: ${donation.pickupLocation.geo_location.latitude}</p>
+    <p class="card-text">Longitude: ${donation.pickupLocation.geo_location.longitude}</p> -->
+    
     <div id="foodTransactionsContainer" class="container" style="margin-top: 6rem">
-        <!-- Static entry for food transactions -->
-        <div class="card mb-4">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h5 class="card-title">Food: Rice, Bread, Vegetables</h5>
-                        <p class="card-text">Quantity: 10 kg</p>
-                        <p class="card-text">Category: Perishable</p>
-                        <p class="card-text">Packaged: Yes</p>
-                        <p class="card-text">Pickup Address: 123 Main Street, Cityville</p>
-                        <p class="card-text">Latitude: 34.0522</p>
-                        <p class="card-text">Longitude: -118.2437</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="card-text">Contact Person: John Doe</p>
-                        <p class="card-text">Contact Phone: 123-456-7890</p>
-                        <p class="card-text">Donor: Jane Smith</p>
-                        <p class="card-text">Additional Notes: Please call before pickup.</p>
-                        <p class="card-text bold-text">NGO Name: Helping Hands</p>
-                        <p class="card-text bold-text">NGO Email: info@helpinghands.org</p>
-                        <p class="card-text bold-text">NGO Phone Number: 987-654-3210</p>
-                    </div>
-                </div>
-                <div class="text-center mt-3">
-                   <button class="btn btn-primary btn-view-photos ml-2"
-                        onclick="showPhotos(['photo1.jpg', 'photo2.jpg'])">View Photos</button>
-                </div>
-            </div>
-        </div>
+        <!-- Food transactions will be dynamically inserted here -->
     </div>
 
     <!-- Photo Modal -->
-    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header" style="justify-content: center;">
+            <div class="modal-content" style="align-items: center;">
+                <div class="modal-header">
                     <h5 class="modal-title" id="photoModalLabel">Photos</h5>
                 </div>
                 <div class="modal-body">
                     <div class="photo-container">
                         <div class="photo-tile">
-                            <img src="images/image_1.jpg" alt="Photo 1" class="tile-photo">
-                            <img src="images/image_3.jpg" alt="Photo 1" class="tile-photo">
-                            <img src="images/image_2.jpg" alt="Photo 1" class="tile-photo">
-                            <img src="images/image_5.jpg" alt="Photo 1" class="tile-photo">
-                            <img src="images/image_4.jpg" alt="Photo 1" class="tile-photo">
+                            <!-- Photos will be dynamically inserted here -->
                         </div>
                     </div>
                     <div class="text-center mt-3">
@@ -234,68 +207,139 @@
                         <button type="button" class="btn btn-secondary btn-next-photo ml-2">Next</button>
                     </div>
                 </div>
-                <div class="modal-footer" style="justify-content: center;">
+                <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
-    </div>
 
     <script>
-        function addPhoneNumber() {
-            const phoneNumbersDiv = document.getElementById('phone_numbers');
-            const newInput = document.createElement('input');
-            newInput.type = 'tel';
-            newInput.className = 'form-control phone-input';
-            newInput.name = 'phone_numbers[]';
-            phoneNumbersDiv.appendChild(newInput);
+        const BACKEND_URL = "http://localhost:3000"; // Update this with your actual backend URL
+
+        async function fetchFoodTransactions() {
+            const token = localStorage.getItem('authToken');
+            if (!token) {
+                alert('Authorization token is missing. Please log in again.');
+                return;
+            }
+            try {
+                const response = await fetch(`${BACKEND_URL}/foodtransaction/foodtransactions/restaurant/claimed`, {
+                    method: "GET",
+                    headers: {
+                        'Authorization': token
+                    }
+                });
+
+                if(response.status == 200){
+                    const data = await response.json();
+                    console.log(data);
+                    createDonationCards(data);
+                }
+                // add condition for directing to guest/login page if token is expired.
+                else{
+                    alert('Failed to fetch food transactions. Please try again later.');
+                }
+            } catch (error) {
+                console.error('Error fetching food transactions:', error);
+                alert('Error fetching food transactions.');
+            }
+        }
+
+        function createDonationCards(donations) {
+            const container = document.getElementById('foodTransactionsContainer');
+            container.innerHTML = '';
+
+            if (donations.length === 0) {
+                const message = document.createElement('div');
+                message.className = 'alert alert-info';
+                message.textContent = 'No Pending Requests';
+                container.appendChild(message);
+                return;
+            }
+
+            donations.forEach(donation => {
+                const card = document.createElement('div');
+                card.className = 'card mb-4';
+                const foodItems = Array.isArray(donation.foodItems) ? donation.foodItems.join(', ') : 'N/A';
+                card.innerHTML = `
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="card-title">Food: ${foodItems}</h5>
+                            <p class="card-text">Quantity: ${donation.quantity}</p>
+                            <p class="card-text">Category: ${donation.foodtype}</p>
+                            <p class="card-text">Packaged: ${donation.packaged ? 'Yes' : 'No'}</p>
+                            <p class="card-text">Pickup Address: ${donation.pickupLocation.address.address_line_1},
+                                ${donation.pickupLocation.address.address_line_2 || 'None'}, 
+                                ${donation.pickupLocation.address.city}</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="card-text">Contact Person: ${donation.contactPerson.name}</p>
+                            <p class="card-text">Contact Phone: ${donation.contactPerson.phone}</p>
+                            <p class="card-text">Additional Notes: ${donation.additionalNotes || 'None'}</p>
+                            <p class="card-text">NGO Name: ${donation.ngo.organization_name}</p>
+                            <p class="card-text">NGO Email: ${donation.ngo.primary_contact.email}</p>
+                            <p class="card-text">NGO Phone Number: ${donation.ngo.primary_contact.phoneno}</p>
+                        </div>
+                    </div>
+                    <div class="text-center mt-3">
+                        <button class="btn btn-primary btn-view-photos ml-2" onclick="showPhotos(${JSON.stringify(donation.food_photos).replace(/"/g, '&quot;')})">View Photos</button>
+                    </div>
+                </div>
+            `;
+                container.appendChild(card);
+            });
         }
     </script>
-    <script>
-        // View Photos button click event
-        document.querySelector('.btn-view-photos').addEventListener('click', function () {
-            $('#photoModal').modal('show');
-        });
-    </script>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Variables to track current photo index and total number of photos
+            
+        function showPhotos(photos) {
+            const photoContainer = document.querySelector('.photo-tile');
+            photoContainer.innerHTML = ''; // Clear previous photos
+
+            photos.forEach((photo, index) => {
+                const img = document.createElement('img');
+                img.src = photo;
+                img.alt = `Photo ${index + 1}`;
+                img.className = 'tile-photo';
+                img.style.display = index === 0 ? 'block' : 'none'; // Show first photo initially
+                photoContainer.appendChild(img);
+            });
+
             let currentPhotoIndex = 0;
-            const photos = document.querySelectorAll('.tile-photo');
             const numPhotos = photos.length;
 
-            // Function to update displayed photo
             function updateDisplayedPhoto() {
+                const photos = document.querySelectorAll('.tile-photo');
                 photos.forEach(photo => {
                     photo.style.display = 'none'; // Hide all photos
                 });
                 photos[currentPhotoIndex].style.display = 'block'; // Show current photo
             }
 
-            // Next photo button click handler
-            document.querySelector('.btn-next-photo').addEventListener('click', function () {
+            document.querySelector('.btn-next-photo').onclick = function () {
                 currentPhotoIndex = (currentPhotoIndex + 1) % numPhotos; // Increment index
                 updateDisplayedPhoto(); // Update displayed photo
-            });
+            };
 
-            // Previous photo button click handler
-            document.querySelector('.btn-previous-photo').addEventListener('click', function () {
+            document.querySelector('.btn-previous-photo').onclick = function () {
                 currentPhotoIndex = (currentPhotoIndex - 1 + numPhotos) % numPhotos; // Decrement index
                 updateDisplayedPhoto(); // Update displayed photo
-            });
+            };
 
-            // Initial setup
-            updateDisplayedPhoto(); // Show initial photo
-        });
+            $('#photoModal').modal('show');
+        }
 
+        document.addEventListener('DOMContentLoaded', fetchFoodTransactions);
 
     </script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/ngo_cards.js"></script>
+    <!-- <script src="js/ngo_cards.js"></script> -->
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
