--- a/Frontend/gallery_restaurant.html
+++ b/Frontend/gallery_restaurant.html
@@ -33,26 +33,45 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Welfare</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
-      </button>
+        <a class="navbar-brand" href="index.html">Welfare</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+            aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="oi oi-menu"></span> Menu
+        </button>
 
-      <div class="collapse navbar-collapse" id="ftco-nav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index_restaurant.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
-          <li class="nav-item active"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
-          <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
-          <li class="nav-item">
-            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
-          </li>
-        </ul>
-      </div>
-  </nav>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="index_restaurant.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
+                <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Donations
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="pending_donations_restaurant.html">Incoming Donations</a></li>
+                        <li><a class="dropdown-item" href="accepted_donations_restaurant.html">Accepted Donations</a></li>
+                        <li><a class="dropdown-item" href="donations_history_restaurant.html">Donations History</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="icon-user"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+                        <a class="dropdown-item" href="#">View Profile</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="index.html" id="logoutLinkNavbar">Logout</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
   <!-- END nav -->
 
   <div class="hero-wrap" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
