--- a/Frontend/Ind_register.html
+++ b/Frontend/Ind_register.html
@@ -270,8 +270,6 @@
         </div>
     </footer>
 
-
-
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
@@ -280,12 +278,12 @@
         </svg></div>
 
     <script>
+        
         document.getElementById('registerForm').addEventListener('submit', async function (event) {
             event.preventDefault();
 
             const form = event.target;
             const formData = new FormData(form);
-            console.log(formData);
 
             const homeAddress = {
                 address_line_1: formData.get('address_line_1'),
@@ -304,12 +302,10 @@
 
             try {
                 console.log(formData);
-                const response = await fetch('http://127.0.0.1/volunteer/create', {
+                const response = await fetch('http://localhost:3000/volunteer/create', {
                     method: 'POST',
                     body: formData
                 });
-
-                console.log(response);
 
                 if (response.status == 201) {
                     alert("Registration successful");
